src/assets/style/common.css
/* ============ 
/* Lists  
/* ============ */
.list-instructions span {
  margin: 2px;
}

.list-instructions p {
  margin-bottom: .5rem;
}

/* ============ 
/* Book Card  
/* ============ */
.book-card-wrapper {
  background: white;
  margin-right: 0.5rem;
  min-width: 6rem;
  width: 6rem;
  border: 1px solid rgb(210, 210, 210);
  /* margin-bottom: 1rem; */
}

.book-card-content {
  background: white;
  padding: 0.25rem;
  /* border-bottom: 1px solid rgb(210, 210, 210); */
}

.book-card img {
  min-height: 100px;
  height: 100px;
  width: 100%;
}

.book-card p {
  margin: 0;
  font-size: 0.65rem;
}

/* ============ 
/* User Messages  
/* ============ */
.user-message-wrapper {
  z-index: 99;
  width: 100%;
  text-align: center;
  height: 100vh;
  position: fixed;
  top: 0px;
  left: 0;
  /* width: 90%;
  margin: auto; */
  /* background: rgba(0, 0, 0, .5); */
  display: flex;
  align-items: center;
  justify-content: center;
}

.user-message {
  padding: 0.25rem;
  font-weight: 700;
  /* display: flex;
  align-items: center;
  justify-content: center; */
  width: 100%;
}

.user-message svg {
  color: var(--err-text);
  padding: 0.25rem;
}

.user-message.error {
  background: var(--err-backgroud);
  color: var(--err-text);
}

.user-message.success {
  background: var(--success-background);
  color: var(--success-text);
}

/* ============ 
/* Modal 
/* ============ */
.modal-wrapper {
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.8);
  background: white;
  z-index: 98;
  padding-top: 60px;
  /* position: relative; */
  overflow-y: scroll;
  /* z-index: 999; */
}

.modal {
  max-width: 768px;
  margin: auto;
  height: 75%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: auto;
  /* position: relative; */
  padding: 1rem;
}

.modal .close-btn {
  align-self: flex-end;
  /* position: absolute;
top: 0;
right: 0; */
}

.modal-header {
  text-align: center;
}

.modal-content {
  max-width: 75%;
}

/* ============ 
/* Buttons
/* ============ */
button {
  background: none;
  border: none;
  cursor: pointer;
}

.list-btns {
  width: 100%;
  padding: 0.5rem 0.25rem;
  background: var(--light);
  border: none;
  text-decoration: underline;
}

.btn {
  background: var(--light);
  padding: 0.5rem;
  box-shadow: 1px 1px 5px var(--black);
  font-weight: 600;
  border-radius: 0.25rem;
}

.btn.responsive {
  width: 100%;
}

.btn-bar {
  display: flex;
  justify-content: space-between;
}

.btn-bar svg {
  color: var(--purblue);
  font-size: 1.25rem;
  margin-top: 0.5rem;
}
.btn-bar svg.delete-book {
  color: var(--err);
}

@media screen and (min-width: 768px) {
  .btn.btn.responsive {
    width: initial;
  }
  .btn.btn.responsive:hover {
    background: var(--blue-gray);
    color: white;
  }
}

/* ============ 
/* Misc
/* ============ */
hr {
  margin: 1rem 0;
}

hr.dark {
  border: 0;
  height: 1px;
  background-image: linear-gradient(
    to right,
    rgba(101, 121, 155, 0),
    rgba(0, 0, 0, 0.75),
    rgba(0, 0, 0, 0)
  );
}

